--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
             <div class="container">
                 <div class="row text-center mt-2 mb-2 d-flex justify-content-center">
                     <div id="orden" class="col-md-4 p-2">
-                        <div class="d-flex justify-content-center clima">
+                        <div class="d-flex justify-content-center">
                             <span id="horaFecha"></span>
-                            <h1 class="p-2" id="temperatura-valor"></h1>
-                            <h2 class="p-2" id="ubicacion"></h2>
+
                         </div>
                     </div>
                     <div class="col-sm-4">
@@ -38,7 +37,7 @@
                     <div id="orden2" class="col-sm-4 btn-header">
                         <button id="theme-toggle" class="btn"><i class="bi bi-moon-fill"></i></button>
                         <a id="login-btn" class="btn" href="login.html"><i class="bi bi-person-fill"></i></a>
-                        <a id="cart-btn" class="btn" href="carrito.html"><i class="bi bi-cart4"></i></a>
+
                     </div>
                 </div>
             </div>
@@ -50,7 +49,7 @@
                 <nav class="menu">
                     <a href="index.html">Inicio</a>
                     <a href="nosotros.html">Nosotros</a>
-                    <a href="tienda.html">Tienda</a>
+
                     <a href="sucursales.html">Sucursales</a>
                     <a href="clases.html">Clases</a>
                     <a href="posturas.html">Posturas</a>
@@ -68,14 +67,14 @@
         <!-- CARRUSEL -->
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="2000">
+                <div class="carousel-item active" data-bs-interval="5000">
                     <img src="assets/imgs/carusel/carNuevaSuc.jpg" class="d-block w-100" alt="Anuncio nueva sucursal">
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <a href="yoga.html"><img src="assets/imgs/carusel/carClasesOnline.jpg" class="d-block w-100"
-                            alt="Promoción clases de Yoga"></a>
+                <div class="carousel-item" data-bs-interval="5000">
+                    <a href="#descargar-app"><img src="assets/imgs/carusel/carApp.jpg" class="d-block w-100"
+                            alt="Promoción descargar app"></a>
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
+                <div class="carousel-item" data-bs-interval="5000">
                     <a href="poses.html"><img src="assets/imgs/carusel/carPoses.jpg" class="d-block w-100"
                             alt="Promoción nuevas poses"></a>
                 </div>
@@ -100,12 +99,12 @@
                             <img src="assets/imgs/clases/yoga2.jpeg" alt="">
                         </div>
                         <div class="col-sm-6">
-                            <p class="p-3 fs-5 text-center">En esta agencia aprenderas sobre la disciplina milenaria
-                                que te
-                                ayudará a mejorar tu salud física y emocional, aumentar tu flexibilidad y fortaleza,
-                                y encontrar un
-                                equilibrio entre cuerpo y mente.
-                                aprender todo sobre yoga.</p>
+                            <p class="p-3 fs-5 text-center">En nuestra agencia, te sumergirás en la milenaria disciplina
+                                del yoga. Descubrirás cómo esta práctica ancestral no solo mejora la salud física, sino
+                                que también nutre tu bienestar emocional. Desde aumentar la flexibilidad y fortaleza
+                                hasta encontrar un equilibrio entre cuerpo y mente, aprenderás las técnicas
+                                fundamentales y avanzadas que transformarán tu vida. ¡Bienvenido a un viaje de
+                                autoconocimiento y bienestar integral a través del yoga!</p>
                         </div>
                         <div class="col-sm-3">
                             <img src="assets/imgs/clases/zen2.jpeg" alt="">
@@ -117,18 +116,32 @@
             <hr>
             <h2 class="text-center benf">Beneficios del Yoga</h2>
             <div class="logo-container">
+                <div class="logo-1">
+                    <img class="logo-icon" src="assets/imgs/icons/estres.png" alt="Logo">
+                    <span class="logo-text">Reduce el estrés</span>
+                </div>
+                <div class="logo-1">
 
-                <img class="logo-icon" src="assets/imgs/icons/estres.png" alt="Logo">
-                <span class="logo-text">Reduce el estrés</span>
-                <img class="logo-icon2" src="assets/imgs/icons/postura.png" alt="">
-                <span class="logo-text">Mejor postura corporal</span>
-                <img class="logo-icon3" src="assets/imgs/icons/flexx.png" alt="">
-                <span class="logo-text">Mejor flexibilidad </span>
-                <img class="logo-icon4" src="assets/imgs/icons/zzz.png" alt="">
-                <span class="logo-text">Ayuda a dormir mejor</span>
+                    <img class="logo-icon2" src="assets/imgs/icons/postura.png" alt="">
+                    <span class="logo-text">Mejor postura corporal</span>
+                </div>
+                <div class="logo-1">
+                    <img class="logo-icon3" src="assets/imgs/icons/flexx.png" alt="">
+                    <span class="logo-text">Mejor flexibilidad </span>
+                </div>
+                <div class="logo-1">
+                    <img class="logo-icon4" src="assets/imgs/icons/zzz.png" alt="">
+                    <span class="logo-text">Ayuda a dormir mejor</span>
+                </div>
 
+                <hr>
             </div>
 
+            <section id="descargar-app">
+                <hr>
+                <img src="assets/imgs/carusel/App.jpg" alt="" class="responsive-img">
+                <hr>
+            </section>
             <section>
                 <hr>
                 <h2 class="salas">Salas y zonas </h2>
