--- a/clases.html
+++ b/clases.html
@@ -50,7 +50,7 @@
                 <nav class="menu">
                     <a href="index.html">Inicio</a>
                     <a href="nosotros.html">Nosotros</a>
-                    <a href="tienda.html">Tienda</a>
+
                     <a href="sucursales.html">Sucursales</a>
                     <a href="clases.html">Clases</a>
                     <a href="posturas.html">Posturas</a>
@@ -65,42 +65,78 @@
     </div>
 
     <main>
-        <h2 id="titulo-clases"><span>Clases</span> Disponibles</h2>
-        <section class="clases-section">
-            <div class="card-container">
-                <a class="card" href="#">
-                    <div class="card__background" style="background-image: url(assets/imgs/clases/funcional2.jpeg)">
-                    </div>
-                    <div class="card__content">
-                        <h3 class="card__heading">YOGA FUNCIONAL</h3>
-                    </div>
+        <h2 class="text-center tittle"><span>Clases</span> Disponibles</h2>
+        <section>
+            <div class="container-QR">
+                <img src="assets/imgs/clases/funcional2.jpeg" alt="QR descargar Yoga Yoga App" class="img-clases">
+                <div class="texto">
+                    <h1 class="pt-3 fs-2 text-left">YOGA FUNCIONAL</h1>
+                    <p class="p-3 fs-5 text-left    ">Horario: Martes y Jueves de 18:00 a 19:00 <br>
+                        Profesor: Ana García <br>
+                        Descripción: Esta clase fusiona elementos de yoga tradicional con técnicas de entrenamiento
+                        funcional. Se enfoca en mejorar la fuerza, flexibilidad y equilibrio, utilizando equipamiento
+                        especializado para potenciar el rendimiento físico y mental. <br>
+                        Sala: Sala funcional.
 
-                </a>
-                <a class="card" href="#">
-                    <div class="card__background" style="background-image: url(assets/imgs/clases/yoga2.jpeg)">
-                    </div>
-                    <div class="card__content">
-                        <h3 class="card__heading">YIN YOGA </h3>
-                    </div>
+                    </p>
+                </div>
+            </div>
+            <div class="container-QR">
+                <div class="texto">
+                    <h1 class="pt-3 fs-2 text-right">YOGA ZEN</h1>
+                    <p class="p-3 fs-5 text-right">Horario: Todos los días de 07:30 a 08:30 <br>
+                        Profesor: Sofia Rodríguez <br>
+                        Descripción: Experimenta la paz interior y el equilibrio mental a través de esta clase que
+                        combina técnicas de meditación guiada y prácticas de respiración consciente. El ambiente
+                        tranquilo y relajante de la sala te ayudará a alcanzar un estado de calma profunda. <br>
+                        Sala: Sala Zen
+                    </p>
+                </div>
+                <img src="assets/imgs/clases/zen1.jpeg" alt="yoga" class="img-clases">
 
-                </a>
-                <a class="card" href="#">
-                    <div class="card__background" style="background-image: url(assets/imgs/clases/zen2.jpeg)">
-                    </div>
-                    <div class="card__content">
-                        <h3 class="card__heading">YOGA ZEN</h3>
-                    </div>
+            </div>
+            <div class="container-QR">
+                <img src="assets/imgs/clases/yoga2.jpeg" alt=yoga" class="img-clases">
+                <div class="texto">
+                    <h1 class="pt-3 fs-2 text-left">YOGA PILATES</h1>
+                    <p class="p-3 fs-5 text-left    ">Horario: Lunes y Miércoles de 17:00 a 18:00 <br>
+                        Profesor: Marta Sánchez <br>
+                        Descripción: Una clase enfocada en las posturas clásicas del yoga, combinando movimientos
+                        fluidos con técnicas de respiración para mejorar la flexibilidad, fortaleza y concentración
+                        mental. <br>
+                        Sala: Sala pilates
+                    </p>
+                </div>
+            </div>
+            <div class="container-QR">
+                <div class="texto">
+                    <h1 class="pt-3 fs-2 text-right">YOGA TRADICIONAL</h1>
+                    <p class="p-3 fs-5 text-right">Horario Matutino: <br>
 
-                    </li>
-                    <a class="card" href="#">
-                        <div class="card__background" style="background-image: url(assets/imgs/clases/yoga.jpeg)">
-                        </div>
-                        <div class="card__content">
-                            <h3 class="card__heading">YOGA</h3>
-                        </div>
+                        Horario: Todos los días de 08:00 a 09:00 <br>
+                        Profesor: Marta Sánchez <br>
+                        Descripción: Esta sesión matutina de yoga tradicional está diseñada para ayudarte a comenzar tu
+                        día con energía positiva y equilibrio mental. Se enfoca en posturas clásicas, técnicas de
+                        respiración y relajación para fortalecer el cuerpo y la mente, proporcionando un impulso de
+                        vitalidad para afrontar la jornada. <br>
+                        Sala: Sala equilibrio.
+                        <br>
+                        <br>
+                        Horario Vespertino: <br>
 
-                    </a>
-                    <div>
+                        Horario: Todos los días de 18:30 a 19:30 <br>
+                        Profesor: David Rodríguez <br>
+                        Descripción: Esta clase vespertina de yoga tradicional está destinada a proporcionar un espacio
+                        de relajación y liberación del estrés acumulado durante el día. A través de posturas suaves,
+                        respiración consciente y meditación, se busca restablecer la armonía y el equilibrio, ayudándote
+                        a encontrar paz interior y preparándote para una noche de descanso reparador. <br>
+                        Sala: Sala equilibrio.
+
+                    </p>
+                </div>
+                <img src="assets/imgs/clases/yoga.jpeg" alt="yoga" class="img-clases">
+
+            </div>
         </section>
 
     </main>
