--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
                 <hr>
                 <img src="assets/imgs/carusel/App.jpg" alt="" class="responsive-img">
                 <hr>
+                <div class="container-QR">
+
+
+                    <img src="assets/imgs/YOGA_YOGA_APP (1).png" alt="QR descargar Yoga Yoga App" class="img-qr">
+
+
+                    <div class="texto">
+                        <h1 class="pt-3 fs-2 border-top text-center">YOGA YOGA APP</h1>
+                        <p class="p-3 fs-5 text-center">Descarga nuestra aplicación, perfecta para entusiastas del yoga
+                            de todos los niveles. Lleva
+                            un registro de tus clases de yoga y disfruta de un viaje más organizado y personalizado en
+                            tu práctica. ¡<span>Descárgala ahora </span> y sumérgete en esta experiencia!
+                        </p>
+                    </div>
+                </div>
             </section>
             <section>
                 <hr>
