--- a/nosotros.html
+++ b/nosotros.html
@@ -67,10 +67,10 @@
     <main>
         <section>
             <h2 class="text-center tittle">Nosotros <span>Yoga Yoga </span></h2>
-            <div class="row nosotros-info">
-                <div class="text-justify">
+            <div class="row ">
+                <div class="text-justify nosotros-informacion">
                     <h4>¿Quiénes somos?</h4>
-                    <p>Yoga Yoga esta formado por un equipo apasionado
+                    <p class="texto-nosotros">Yoga Yoga esta formado por un equipo apasionado
                         por el yoga y
                         estamos comprometidos en compartir nuestros conocimientos y experiencias para ayudarte a
                         encontrar la
@@ -89,10 +89,9 @@
                 </div>
         </section>
 
-        <section>
-            <h4 id="titulo-profile">Nuestro Equipo:</h4>
-            <div class="nosotros">
+        <section class="team-container">
 
+            <div class="nosotros">
                 <div class="person">
                     <div class="container-nosotros">
                         <div class="container-inner">
