--- a/sucursales.html
+++ b/sucursales.html
@@ -50,7 +50,7 @@
                 <nav class="menu">
                     <a href="index.html">Inicio</a>
                     <a href="nosotros.html">Nosotros</a>
-                    <a href="tienda.html">Tienda</a>
+
                     <a href="sucursales.html">Sucursales</a>
                     <a href="clases.html">Clases</a>
                     <a href="posturas.html">Posturas</a>
@@ -68,14 +68,16 @@
         <section>
             <h2 class="text-center tittle">Nuestras <span>Sucursales</span></h2>
             <div class="row nosotros-info">
-                <div class="text-justify">
+                <div class="p-3 fs-5 text-center texto-suc">
                     <p>En Yoga Yoga contamos con 5 sucursales a lo largo de Santiago,
                         ¿Quieres
                         saber
                         más
-                        detalles? Haz click
+                        detalles?
+                        <br> Haz click
                         en más información de la
-                        sucursal a la que quieres asistir y resuelve tus dudas</p>
+                        sucursal a la que quieres asistir y resuelve tus dudas
+                    </p>
                 </div>
 
         </section>
