--- a/index.html
+++ b/index.html
@@ -139,8 +139,6 @@
 
             <section id="descargar-app">
                 <hr>
-                <img src="assets/imgs/carusel/App.jpg" alt="" class="responsive-img">
-                <hr>
                 <div class="container-QR">
 
 
@@ -148,7 +146,8 @@
 
 
                     <div class="texto">
-                        <h1 class="pt-3 fs-2 border-top text-center">YOGA YOGA APP</h1>
+                        <h1 class="pt-3 fs-2 
+                         text-center">YOGA YOGA APP</h1>
                         <p class="p-3 fs-5 text-center">Descarga nuestra aplicación, perfecta para entusiastas del yoga
                             de todos los niveles. Lleva
                             un registro de tus clases de yoga y disfruta de un viaje más organizado y personalizado en
