--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
                         <p class="p-3 fs-5 text-center">Descarga nuestra aplicación, perfecta para entusiastas del yoga
                             de todos los niveles. Lleva
                             un registro de tus clases de yoga y disfruta de un viaje más organizado y personalizado en
-                            tu práctica. ¡<a
-                                href="https://drive.google.com/file/d/1MBp84h89lg0QvyThNVQS2iaga14DxW7P/view?usp=sharing"><span>Descárgala
+                            tu práctica. ¡<a id="link"
+                                href="https://drive.google.com/file/d/1MBp84h89lg0QvyThNVQS2iaga14DxW7P/view?usp=sharing"
+                                target="_blank"><span> Descárgala
                                     ahora </span> </a> y sumérgete en esta
                             experiencia!
                         </p>
