--- a/contacto.html
+++ b/contacto.html
@@ -302,7 +302,7 @@
             <div class="footer-copyright">
                 <div class="footer-copyright-wrapper">
                     <p class="footer-copyright-text">
-                        ©2023 Yoga Yoga | Diseñado por: Kraviz- Gamero - Sarten
+                        ©2023 Yoga Yoga | Diseñado por: Kraviz - Sarten
                     </p>
                 </div>
             </div>
