--- a/nosotros.html
+++ b/nosotros.html
@@ -50,7 +50,7 @@
                 <nav class="menu">
                     <a href="index.html">Inicio</a>
                     <a href="nosotros.html">Nosotros</a>
-                    <a href="tienda.html">Tienda</a>
+
                     <a href="sucursales.html">Sucursales</a>
                     <a href="clases.html">Clases</a>
                     <a href="posturas.html">Posturas</a>
@@ -191,7 +191,7 @@
             <div class="footer-copyright">
                 <div class="footer-copyright-wrapper">
                     <p class="footer-copyright-text">
-                        ©2023 Yoga Yoga | Diseñado por: Kraviz- Gamero - Sarten
+                        ©2023 Yoga Yoga | Diseñado por: Kraviz - Sarten
                     </p>
                 </div>
             </div>
