--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             alt="Promoción descargar app"></a>
                 </div>
                 <div class="carousel-item" data-bs-interval="5000">
-                    <a href="poses.html"><img src="assets/imgs/carusel/carPoses.jpg" class="d-block w-100"
+                    <a href="#"><img src="assets/imgs/carusel/carPoses.jpg" class="d-block w-100"
                             alt="Promoción nuevas poses"></a>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                 <div class="container-QR">
 
 
-                    <img src="assets/imgs/YOGA_YOGA_APP (1).png" alt="QR descargar Yoga Yoga App" class="img-qr">
+                    <img src="assets/imgs/frame.png" alt="QR descargar Yoga Yoga App" class="img-qr">
 
 
                     <div class="texto">
@@ -152,7 +152,7 @@
                             de todos los niveles. Lleva
                             un registro de tus clases de yoga y disfruta de un viaje más organizado y personalizado en
                             tu práctica. ¡<a id="link"
-                                href="https://drive.google.com/file/d/1MBp84h89lg0QvyThNVQS2iaga14DxW7P/view?usp=sharing"
+                                href="https://drive.google.com/file/d/1eetX5HiJDJCwfLkd6j3tpH6qTwLPG0ZI/view?usp=drive_link"
                                 target="_blank"><span> Descárgala
                                     ahora </span> </a> y sumérgete en esta
                             experiencia!
