--- a/index.html
+++ b/index.html
@@ -142,21 +142,23 @@
                 <div class="container-QR">
 
 
-                    <img src="assets/imgs/frame.png" alt="QR descargar Yoga Yoga App" class="img-qr">
+                    <img src="assets/imgs/QR YOGAYOGA APP.png" alt="QR descargar Yoga Yoga App" class="img-qr">
 
 
-                    <div class="texto">
+                    <div class="texto justify-content-center">
                         <h1 class="pt-3 fs-2 
                          text-center">YOGA YOGA APP</h1>
+
                         <p class="p-3 fs-5 text-center">Descarga nuestra aplicación, perfecta para entusiastas del yoga
                             de todos los niveles. Lleva
                             un registro de tus clases de yoga y disfruta de un viaje más organizado y personalizado en
-                            tu práctica. ¡<a id="link"
-                                href="https://drive.google.com/file/d/1eetX5HiJDJCwfLkd6j3tpH6qTwLPG0ZI/view?usp=drive_link"
-                                target="_blank"><span> Descárgala
+                            tu práctica. <a id="link" href="assets/yogayoga-app.apk" download="yogayoga-app.apk"><span>
+                                    ¡Descárgala
                                     ahora </span> </a> y sumérgete en esta
                             experiencia!
                         </p>
+                        <a href="assets/yogayoga-app.apk" download="yogayoga-app.apk" class="boton-descarga ">Descargar
+                            Archivo</a>
                     </div>
                 </div>
             </section>
